--- a/Dairy_Care_System/dairy/static/css/adminpage.css
+++ b/Dairy_Care_System/dairy/static/css/adminpage.css
@@ -1,25 +1,27 @@
 ul {
     list-style-type: none;
     margin: 0;
-    padding: 5px;
+    padding: 0;
     overflow: hidden;
-    background-color: #000000;
     display: flex;
+    background-color: #000;
     align-items: center;
 }
 
 .header {
     width: 100%;
     display: flex;
+    font-size: 20px;
     justify-content: flex-end;
     align-items: center;
-    margin: 0 5px;
-    padding: 5px 10px;
+    margin: 0 3px;
+    padding: 3px 10px;
     font-family: 'Arial', sans-serif;
 }
 
 .nav-item {
     display: flex;
+    font-size: 20px;
     flex-direction: column;
     align-items: center;
     color: rgb(255, 255, 255);
@@ -27,7 +29,7 @@ ul {
 
 li {
     margin-right: 10px;
-    font-size: 20px;
+    font-size: 25px;
 }
 
 li a {
