--- a/Dairy_Care_System/dairy/static/css/changepassword.css
+++ b/Dairy_Care_System/dairy/static/css/changepassword.css
@@ -3,6 +3,86 @@ html, body {
     margin: 0; /* Remove default margin */
 }
 
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #000000;
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+}
+
+.header {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 10px 15px;
+    box-sizing: border-box;
+    font-family: 'Arial', sans-serif;
+}
+
+.nav-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: rgb(255, 255, 255);
+}
+
+li {
+    margin-right: 10px;
+    font-size: 20px;
+}
+
+li a {
+    display: block;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    text-decoration: none;
+    padding: 4px 5px;
+    transition: background-color 0.3s ease;
+}
+
+li a:hover {
+    background-color: #ddd;
+    border-radius: 5px;
+}
+
+
+/* Dropdown styles */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    right: 0;
+    top: 70px;
+    border-radius: 5px;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.nav-item:hover .dropdown-content {
+    display: block;
+}
+
 .container {
     background-color: rgba(255, 255, 255, 0.8);
     border-radius: 10px;
@@ -57,7 +137,7 @@ button[type="submit"]:hover {
     position: absolute;
     top: 20px;
     left: 20px;
-    font-size: 30px;
+    font-size: 25px;
     color: rgb(255, 255, 255);
     text-decoration: none;
     font-family: 'Comic Sans MS', cursive;
