--- a/Dairy_Care_System/dairy/static/css/custproductslist.css
+++ b/Dairy_Care_System/dairy/static/css/custproductslist.css
@@ -1,4 +1,4 @@
-ul {
+/* ul {
     list-style-type: none;
     margin: 0;
     padding: 5px;
@@ -45,7 +45,7 @@ li a {
 li a:hover {
     background-color: #ddd;
     border-radius: 5px;
-}
+} */
 
 h1 {
     color: black;
@@ -72,39 +72,10 @@ p {
     text-align: center; /* Centering the product name */
 }
 
-/* Dropdown styles */
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-    right: 0;
-    top: 70px;
-    border-radius: 5px;
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
-
-.dropdown-content a:hover {
-    background-color: #ddd;
-}
-
-.nav-item:hover .dropdown-content {
-    display: block;
-}
-
 /* Products container styles */
 .products-container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr)); /* Adjust min width as needed */
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); /* Adjust min width as needed */
     gap: 60px; /* Space between items */
     padding: 60px; /* Padding around the container */
 }
@@ -123,7 +94,7 @@ p {
 }
 
 .product img {
-    width: 100%; /* Full width of the product container */
+    width: 100%; /* Full width of the prsoduct container */
     height: 250px; /* Fixed height for uniformity */
     object-fit: cover; /* Maintain aspect ratio and cover the area */
     border-radius: 4px; /* Rounded corners for the image */
