--- a/Dairy_Care_System/dairy/static/css/login.css
+++ b/Dairy_Care_System/dairy/static/css/login.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: flex-end; /* Aligns the login box to the right */
     align-items: center;
-    height: 100vh;
+    height: 107vh;
     padding-right: 150px; /* Adjust as needed for spacing from the right edge */
 }
 
@@ -97,14 +97,99 @@ h2 {
 /* Home Icon Style */
 .home-icon {
     color: #000000; /* Color for the home icon */
-    margin-right: 20px; /* Space from the left edge */
+    margin-left: 20px; /* Space from the left edge */
     margin-top: 10px; /* Space from the top of the header */
-    float: right; /* Aligns the icon to the left */
-    font-size: 45px; /* Increase the size of the icon (adjust as needed) */
+    float: left; /* Aligns the icon to the left */
+    font-size: 30px; /* Increase the size of the icon (adjust as needed) */
 }
 
 .error-message {
     color: red;
     font-size: 15px;
     margin-top: 5px;
+}
+
+/* Header style */
+.header {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;        
+    padding: 4px;
+    font-family: 'Arial', sans-serif;
+}
+
+/* Navigation item style */
+.nav-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.form-group input {
+    width: 100%; /* Full width */
+    padding: 10px; /* Same padding for both fields */
+    box-sizing: border-box; /* Makes sure padding doesn't affect overall width */
+}
+
+.password-input-wrapper {
+    position: relative;
+    width: 100%;
+}
+
+.password-input-wrapper input {
+    width: 100%; /* Ensure password input takes full width */
+    padding: 10px; /* Same padding as username */
+    box-sizing: border-box; /* Ensure padding and icon don't affect the width */
+}
+
+.toggle-password {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    color: #888;
+}
+.toggle-password:hover {
+    color: #333;
+}
+
+footer {
+    text-align: center;
+    margin-top: 10px;
+    color: #000000;
+}
+
+ul {
+list-style-type: none;
+margin: 0; /* Remove default margin */
+padding: 5px; /* You can adjust this as needed */
+overflow: hidden;
+background-color: rgba(255, 255, 255, 0.8); /* Light background for header */
+position: fixed; /* Fix the header to the top */
+top: 0; /* Align to the top of the viewport */
+left: 0; /* Align to the left of the viewport */
+right: 0; /* Align to the right of the viewport */
+z-index: 1000; /* Ensure it stays above other content */
+}
+
+li {
+float: right;
+margin-right: 10px;
+font-size: 20px;
+}
+
+li a {
+display: block;
+color: black;
+text-align: center;
+text-decoration: none;
+padding: 10px 12px;
+transition: background-color 0.3s ease, transform 0.3s ease; /* Added transform to transition */
+}
+
+li a:hover {
+background-color: #ddd;
+border-radius: 5px;
+transform: scale(1.1); /* Scale up the item on hover */
 }
