--- a/Dairy_Care_System/dairy/static/css/registration.css
+++ b/Dairy_Care_System/dairy/static/css/registration.css
@@ -25,7 +25,8 @@
 h2 {
     font-family: Copperplate, Papyrus, fantasy;
     font-size: 36px;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
+    margin-top: 2px;
 }
 
 .login-box input[type="text"], 
@@ -38,6 +39,16 @@ h2 {
     width: 100%;
     margin-bottom: 20px;
     background-color: #eaebe8;
+}
+
+.login-box select {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 10px;
+    width: 100%; /* Ensures it matches the width of text inputs */
+    margin-bottom: 20px; /* Consistent spacing */
+    background-color: #eaebe8; /* Matches the background color of text inputs */
+    box-sizing: border-box; /* Ensures padding doesn't affect width */
 }
 
 .login-box button[type="submit"] {
@@ -73,6 +84,35 @@ h2 {
 
 .google-signin span {
     font-size: 16px;
+}
+
+.form-group input {
+    width: 100%; /* Full width */
+    padding: 10px; /* Same padding for both fields */
+    box-sizing: border-box; /* Makes sure padding doesn't affect overall width */
+}
+
+.password-input-wrapper {
+    position: relative;
+    width: 100%;
+}
+
+.password-input-wrapper input {
+    width: 100%; /* Ensure password input takes full width */
+    padding: 10px; /* Same padding as username */
+    box-sizing: border-box; /* Ensure padding and icon don't affect the width */
+}
+
+.toggle-password {
+    position: absolute;
+    right: 10px;
+    top: 35%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    color: #888;
+}
+.toggle-password:hover {
+    color: #333;
 }
 
 /* .home-link {
