--- a/Dairy_Care_System/dairy/static/css/updateuserprofile.css
+++ b/Dairy_Care_System/dairy/static/css/updateuserprofile.css
@@ -6,6 +6,86 @@ body {
     padding: 0;
 }
 
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #000000;
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+}
+
+.header {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 10px 15px;
+    box-sizing: border-box;
+    font-family: 'Arial', sans-serif;
+}
+
+.nav-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: rgb(255, 255, 255);
+}
+
+li {
+    margin-right: 10px;
+    font-size: 20px;
+}
+
+li a {
+    display: block;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    text-decoration: none;
+    padding: 4px 5px;
+    transition: background-color 0.3s ease;
+}
+
+li a:hover {
+    background-color: #ddd;
+    border-radius: 5px;
+}
+
+
+/* Dropdown styles */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    right: 0;
+    top: 70px;
+    border-radius: 5px;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.nav-item:hover .dropdown-content {
+    display: block;
+}
+
 .container {
     background-color: rgba(255, 255, 255, 0.9);
     width: 25%;
@@ -47,6 +127,7 @@ input[type="text"], input[type="email"] {
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
+    width: 100%;
 }
 
 .btn:hover {
@@ -57,7 +138,7 @@ input[type="text"], input[type="email"] {
     position: absolute;
     top: 20px;
     left: 20px;
-    font-size: 30px;
+    font-size: 25px;
     color: white;
     text-decoration: none;
     font-family: 'Comic Sans MS', cursive;
