--- a/Dairy_Care_System/templates/customerpage.html
+++ b/Dairy_Care_System/templates/customerpage.html
@@ -4,6 +4,7 @@
 <head>
     <title>Customer Dashboard</title>
     <link rel="stylesheet" href="{% static 'css/customerpage.css' %}">
+    <link rel="stylesheet" href="{% static 'css/custheadsidenav.css' %}">
     <style>
         body {
             background: url('{% static "images/customerpage.jpg" %}') no-repeat center center fixed;
@@ -32,7 +33,8 @@
         <a href="{% url 'viewcart' %}"><i class="fas fa-shopping-cart"></i> Your Cart</a><br>
         <a href="{% url 'orderhistory' %}"><i class="fas fa-shopping-bag"></i> Your Orders</a><br>
         <a href="{% url 'preorderlisting' %}"><i class="fas fa-clipboard-list"></i> Your Pre-Orders</a><br>
-        <a href="{% url 'feedbackpage' %}" id="feed"><i class="fas fa-comments"></i> Your Feedback</a><br>
+        <a href="{% url 'feedbackpage' %}" id="feed"><i class="fas fa-comment"></i> Give Feedback</a><br>
+        <a href="{% url 'custfeedback' %}" id="feed"><i class="fas fa-comments"></i> Your Feedbacks</a><br>
     </div>
 
     <!-- Navigation Bar -->
@@ -53,7 +55,7 @@
                 </li>
             </div>
         </div>
-    </ul>
+    </ul><br><br><br>
 
     <center>
         <!-- Message and Quote -->
@@ -66,7 +68,7 @@
         </div><br><br><br><br><br><br><br><br><br><br><br><br>
 
         <footer>
-            <p>&copy; 2024 Dairy Care System. All rights reserved.</p>
+            <b><p>&copy; 2024 Dairy Care System. All rights reserved.</p></b>
         </footer>
     </center>
 
