--- a/Dairy_Care_System/templates/employeepage.html
+++ b/Dairy_Care_System/templates/employeepage.html
@@ -23,9 +23,10 @@
     <!-- Side Navigation -->
     <div id="mySidenav" class="sidenav">
         <a href="#">Dairy Care System</a><br><br><br>
+        <a href="#"><i class="fas fa-shopping-basket"></i> Deliver Details</a><br>
+        <a href="#"><i class="fas fa-shopping-basket"></i> Feedback Review</a><br>
         <a href="{% url 'productslist' %}"><i class="fas fa-shopping-basket"></i> Products List</a><br>
         <a href="{% url 'animalslist' %}"><i class="fa fa-paw"></i> Animals List</a><br>
-        <a href="#"><i class="fas fa-glass-whiskey"></i> Milk Details</a><br>
         <a href="stocknotification"><i class="fas fa-bell"></i>  Notifications</a><br>
     </div>
 
