--- a/Dairy_Care_System/templates/feedbackpage.html
+++ b/Dairy_Care_System/templates/feedbackpage.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feedback Page</title>
+    <link rel="stylesheet" href="{% static 'css/custheadsidenav.css' %}">
     <link rel="stylesheet" href="{% static 'css/feedbackpage.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
-            margin: 0;
+            margin-left: 250px;
             padding: 0;
             background: url('{% static "images/feedbackpage.png" %}') no-repeat center center fixed;
             background-size: cover;
@@ -38,8 +39,40 @@
 </head>
 <body>
 
-    <!-- Navigation Bar-->
+    <!-- Side Navigation (Always Visible) -->
+    <div id="mySidenav" class="sidenav">
+        <a href="#"></i> Dairy Care System</a><br><br><br>
+        <a href="{% url 'custproductslist' %}" id="products"><i class="fas fa-shopping-basket"></i> Products List</a><br>
+        <a href="{% url 'wishlist' %}"><i class="fas fa-heart"></i> Your Wishlist</a><br>
+        <a href="{% url 'viewcart' %}"><i class="fas fa-shopping-cart"></i> Your Cart</a><br>
+        <a href="{% url 'orderhistory' %}"><i class="fas fa-shopping-bag"></i> Your Orders</a><br>
+        <a href="{% url 'preorderlisting' %}"><i class="fas fa-clipboard-list"></i> Your Pre-Orders</a><br>
+        <a href="{% url 'feedbackpage' %}" id="feed"><i class="fas fa-comment"></i> Give Feedback</a><br>
+        <a href="{% url 'custfeedback' %}" id="feed"><i class="fas fa-comments"></i> Your Feedbacks</a><br>
+    </div>
+
+    <!-- Navigation Bar -->
     <ul>
+        <div class="header">
+            <div class="nav-item">
+                <li>
+                    <b>
+                        <a href="#" class="username" onclick="toggleDropdown()">
+                            <i class="fas fa-user-circle"></i> {{ username }}
+                        </a>
+                    </b>
+                    <div class="dropdown-content" id="dropdown-content">
+                        <a href="{% url 'userprofile' %}"><i class="fas fa-user"></i> Profile</a>
+                        <!-- Change Logout link to trigger a custom SweetAlert -->
+                        <a href="#" onclick="confirmLogout()" id="logout"><i class="fas fa-sign-out-alt"></i> Logout</a>
+                    </div>
+                </li>
+            </div>
+        </div>
+    </ul>
+
+    <!-- Navigation Bar-->
+    <!-- <ul>
         <div class="header">
             <div class="nav-item">
                 <li><b><a href="{% url 'custproductslist' %}"><i class="fas fa-shopping-basket"></i> Products List</a></b></li>
@@ -70,7 +103,7 @@
                 </li>
             </div>
         </div>
-    </ul>
+    </ul> -->
 
     <div class="container">
         <div class="feedback-box"><br><br>
@@ -119,8 +152,11 @@
     </div>
     </div>
 
-    <!-- Add SweetAlert2 JavaScript -->
+    <!-- Font Awesome for icons -->
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <!-- Add SweetAlert2 and Font Awesome JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
 
     <script>
         // Toggle dropdown on click
