--- a/Dairy_Care_System/templates/viewcart.html
+++ b/Dairy_Care_System/templates/viewcart.html
@@ -7,101 +7,16 @@
     <!-- Include Google Fonts and Font Awesome for icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    <link rel="stylesheet" href="{% static 'css/custheadsidenav.css' %}">
     <!-- Custom CSS -->
     <style>
         body {
             font-family: 'Open Sans', sans-serif;
             background: url('{% static "images/.jpg" %}') no-repeat center center fixed;
             background-size: cover;
-            margin: 0;
+            margin-left: 250px;
             padding: 0;
         }
-
-        ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 5px;
-            overflow: hidden;
-            background-color: black;
-            display: flex;
-            align-items: center;
-        }
-
-        .header {
-            width: 100%;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 5px;
-            font-family: 'Arial', sans-serif;
-        }
-
-        .nav-item.left {
-            color: white;
-            padding: 5px 8px;
-        }
-
-        .nav-item {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        li {
-            margin-right: 10px;
-            font-size: 20px;
-        }
-
-        li a {
-            display: block;
-            color: white;
-            text-align: center;
-            text-decoration: none;
-            padding: 10px 12px;
-            transition: background-color 0.3s ease;
-        }
-
-        li a:hover {
-            background-color: #ddd;
-            border-radius: 5px;
-        }
-
-        .dropdown-content {
-            display: none;
-            position: absolute;
-            background-color: #f9f9f9;
-            min-width: 160px;
-            box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-            z-index: 1;
-            right: 0;
-            top: 70px;
-            border-radius: 5px;
-        }
-
-        .dropdown-content a {
-            color: black;
-            padding: 12px 16px;
-            text-decoration: none;
-            display: block;
-            text-align: left;
-        }
-
-        .dropdown-content a:hover {
-            background-color: #ddd;
-        }
-
-        .nav-item:hover .dropdown-content {
-            display: block;
-        }
-
-        /* h2 {
-            text-align: center;
-            font-family: Copperplate, Papyrus, fantasy;
-            font-size: 35px;
-            padding: 20px;
-            font-weight: 600;
-            color: #0f4f94;
-        } */
 
         h2 {
             text-align: center;
@@ -309,12 +224,46 @@
             }
         }
     </style>
+    <!-- Add Font Awesome and SweetAlert2 CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
 </head>
 <body>
 
-    <!-- Navigation Bar-->
+    <!-- Side Navigation (Always Visible) -->
+    <div id="mySidenav" class="sidenav">
+        <a href="#"></i> Dairy Care System</a><br><br><br>
+        <a href="{% url 'custproductslist' %}" id="products"><i class="fas fa-shopping-basket"></i> Products List</a><br>
+        <a href="{% url 'wishlist' %}"><i class="fas fa-heart"></i> Your Wishlist</a><br>
+        <a href="{% url 'viewcart' %}"><i class="fas fa-shopping-cart"></i> Your Cart</a><br>
+        <a href="{% url 'orderhistory' %}"><i class="fas fa-shopping-bag"></i> Your Orders</a><br>
+        <a href="{% url 'preorderlisting' %}"><i class="fas fa-clipboard-list"></i> Your Pre-Orders</a><br>
+        <a href="{% url 'feedbackpage' %}" id="feed"><i class="fas fa-comment"></i> Give Feedback</a><br>
+        <a href="{% url 'custfeedback' %}" id="feed"><i class="fas fa-comments"></i> Your Feedbacks</a><br>
+    </div>
+
+    <!-- Navigation Bar -->
     <ul>
+        <div class="header">
+            <div class="nav-item">
+                <li>
+                    <b>
+                        <a href="#" class="username" onclick="toggleDropdown()">
+                            <i class="fas fa-user-circle"></i> {{ username }}
+                        </a>
+                    </b>
+                    <div class="dropdown-content" id="dropdown-content">
+                        <a href="{% url 'userprofile' %}"><i class="fas fa-user"></i> Profile</a>
+                        <!-- Change Logout link to trigger a custom SweetAlert -->
+                        <a href="#" onclick="confirmLogout()" id="logout"><i class="fas fa-sign-out-alt"></i> Logout</a>
+                    </div>
+                </li>
+            </div>
+        </div>
+    </ul>
+
+    <!-- Navigation Bar-->
+    <!-- <ul>
         <div class="header">
             <div class="nav-item">
                 <li><b><a href="{% url 'custproductslist' %}"><i class="fas fa-shopping-basket"></i> Products List</a></b></li>
@@ -345,7 +294,7 @@
                 </li>
             </div>
         </div>
-    </ul>
+    </ul> -->
 
 <div class="main-content">
 
@@ -417,8 +366,9 @@
     </div>
 </div>
 
-    <!-- Add SweetAlert2 JavaScript -->
+    <!-- Add SweetAlert2 and Font Awesome JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
 
     <script>
         // Toggle dropdown on click
@@ -445,7 +395,7 @@
         function confirmLogout() {
             Swal.fire({
                 title: 'Are you sure?',
-                text: "You will be logged out of the system!",
+                text: "You will be logged out of Dairy Care System!",
                 icon: 'warning',
                 showCancelButton: true,
                 confirmButtonColor: '#3085d6',
